@@ -26,6 +26,12 @@
         <configuration>
           <forkCount>2</forkCount>
           <reuseForks>true</reuseForks>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+            -Dillegal-access=permit
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
